Resolvement of some PR threads

--- a/database/Makefile
+++ b/database/Makefile
@@ -1,3 +1,5 @@
+.PHONY: drop_tables_linux tables_windows drop_tables_windows
+
 # Linux
 drop_tables_linux:
 	sh drop_all_tables.sh
@@ -5,7 +7,6 @@ drop_tables_linux:
 # Windows 
 tables_windows:
 	powershell -noexit "& "".\create_all_tables.ps1"""
-
 
 drop_tables_windows:
 	powershell -noexit "& "".\drop_all_tables.ps1"""
