--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,6 +35,27 @@ jobs:
                   xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
                   xsi:schemaLocation="http://maven.apache.org/SETTINGS/1.0.0
         http://maven.apache.org/xsd/settings-1.0.0.xsd">
+        <activeProfiles>
+        <activeProfile>github</activeProfile>
+        </activeProfiles>
+            <profiles>
+              <profile>
+                  <id>github</id>
+                  <repositories>
+                    <repository>
+                      <id>central</id>
+                        <url>https://repo.maven.apache.org/maven2</url>
+                      </repository>
+                    <repository>
+                      <id>github</id>
+                      <url>https://maven.pkg.github.com/pwssOrg/literate-octo-guacamole</url>
+                      <snapshots>
+                        <enabled>true</enabled>
+                      </snapshots>
+                  </repository>
+                </repositories>
+          </profile>
+        </profiles>
           <servers>
             <server>
               <id>github</id>
