--- a/.github/workflows/snyk-scan.yml
+++ b/.github/workflows/snyk-scan.yml
@@ -8,6 +8,54 @@ on:
   workflow_dispatch:
  
 jobs:
+  setup-maven-for-private-packages:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Set up environment variables for accessing the private GitHub package repository
+        env:
+          GITHUB_TOKEN: ${{ secrets.READ_PACKAGE_TOKEN_FOR_WORKFLOWS_R }}
+        run: echo "GITHUB_TOKEN is set to access private packages"
+
+      - name: Setup Maven Settings
+        run: |
+          mkdir -p ~/.m2
+          cat <<EOF > ~/.m2/settings.xml
+          <settings xmlns="http://maven.apache.org/SETTINGS/1.0.0"
+                    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+                    xsi:schemaLocation="http://maven.apache.org/SETTINGS/1.0.0
+          http://maven.apache.org/xsd/settings-1.0.0.xsd">
+            <activeProfiles>
+              <activeProfile>github</activeProfile>
+            </activeProfiles>
+            <profiles>
+              <profile>
+                <id>github</id>
+                <repositories>
+                  <repository>
+                    <id>central</id>
+                    <url>https://repo.maven.apache.org/maven2</url>
+                  </repository>
+                  <repository>
+                    <id>github</id>
+                    <url>https://maven.pkg.github.com/pwssOrg/literate-octo-guacamole</url>
+                    <snapshots>
+                      <enabled>true</enabled>
+                    </snapshots>
+                  </repository>
+                </repositories>
+              </profile>
+            </profiles>
+            <servers>
+              <server>
+                <id>github</id>
+                <username>${{ secrets.READ_PACKAGE_USER_FOR_WORKFLOWS }}</username>
+                <password>${{ secrets.READ_PACKAGE_TOKEN_FOR_WORKFLOWS }}</password>
+              </server>
+            </servers>
+          </settings>
+          EOF
+
   security-file-integrity_scanner:
     uses: pwssOrg/reusable-workflows/.github/workflows/sca_scan_base.yml@main
     with:
