update makefile in database package

--- a/database/Makefile
+++ b/database/Makefile
@@ -1,4 +1,4 @@
-.PHONY: drop_tables_linux tables_windows drop_tables_windows
+.PHONY: drop_tables_linux tables_windows tables_windows_with_mock_data drop_tables_windows
 
 # Linux
 drop_tables_linux:
@@ -7,6 +7,9 @@ drop_tables_linux:
 # Windows 
 tables_windows:
 	powershell -noexit "& "".\create_all_tables.ps1"""
+
+tables_windows_with_mock_data:
+	powershell -noexit "& "".\create_all_tables.ps1 -InsertTestData $true"""
 
 drop_tables_windows:
 	powershell -noexit "& "".\drop_all_tables.ps1"""
