Big Integer and addition of help target in make script
I already had the code for the Make script, and fixing bigint on the tables was an easy fix. You can decide on whether to keep making script or not.  On windows with ODBC, they won’t work well.  Have a blessed day, Stefan!

--- a/database/Makefile
+++ b/database/Makefile
@@ -13,3 +13,13 @@ tables_windows_with_mock_data:
 
 drop_tables_windows:
 	powershell -noexit "& "".\drop_all_tables.ps1"""
+
+# Help target to display command descriptions
+help:
+	@echo Available targets:
+
+	@echo   drop_tables_linux     - Drop all tables on a Linux system by executing 'drop_all_tables.sh'
+	@echo   tables_windows        - Create all tables in Windows using create_all_tables.ps1 script
+	@echo   tables_windows_with_mock_data - Create all tables and insert mock data in Windows
+	@echo   drop_tables_windows   - Drop all tables on a Windows system by executing drop_all_tables.ps1
+	@echo   help                  - Display this help message
