--- a/File-Integrity-Scanner/pom.xml
+++ b/File-Integrity-Scanner/pom.xml
@@ -86,13 +86,11 @@
         </dependency>
 
 
-
-
-        <!-- https://github.com/pwssOrg/ShredChat/packages/2386148 -->
+        <!-- https://github.com/pwssOrg/literate-octo-guacamole/packages/2589330 -->
         <dependency>
-            <groupId>lib.pwss.cryptographic_algorithm</groupId>
-            <artifactId>cryptographic_algorithm</artifactId>
-            <version>1.3</version>
+            <groupId>lib.pwss</groupId>
+            <artifactId>algorithm-hash-extraction</artifactId>
+            <version>1.0</version>
         </dependency>
 
     </dependencies>
