--- a/File-Integrity-Scanner/pom.xml
+++ b/File-Integrity-Scanner/pom.xml
@@ -92,6 +92,14 @@
             <version>1.0</version>
         </dependency>
 
+        <!-- https://github.com/pwssOrg/PWSS-DirectoryNav/packages/2588313 -->
+        <dependency>
+            <groupId>lib.pwss</groupId>
+            <artifactId>directory_nav</artifactId>
+            <version>0.5</version>
+        </dependency>
+
+
 
     </dependencies>
 
