Update build.yml (change branch name for push)
Changed branch name for push

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,7 +2,7 @@ name: Makefile CI
 
 on:
   push:
-    branches: [ "develop" ]
+    branches: [ "95-fix-broken-workflow-scripts" ]
   pull_request:
     branches: [ "master" ]
 
