--- a/.github/workflows/snyk-scan.yml
+++ b/.github/workflows/snyk-scan.yml
@@ -2,16 +2,17 @@ name: SCA Scan - File Integrity Scanner
 
 on:
   push:
-    branches: [ "master" ]
+    branches: [ "95-fix-broken-workflow-scripts" ]
   pull_request:
     branches: [ "master" ]
   workflow_dispatch:
  
 jobs:
   security-file-integrity_scanner:
-    uses: pwssOrg/reusable-workflows/.github/workflows/sca_scan_base.yml@main
+    uses: pwssOrg/reusable-workflows/.github/workflows/sca_test.yml@Fix_Broken_Workflow_Scripts_in_file_integrity_scanner-95
     with:
        working-path: File-Integrity-Scanner
        name-of-snyk-step: Check for vulnerabilities in File Integrity Scanner
+       integrity_db: true
     secrets:
       SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
