--- a/.github/workflows/snyk-scan.yml
+++ b/.github/workflows/snyk-scan.yml
@@ -2,14 +2,14 @@ name: SCA Scan - File Integrity Scanner
 
 on:
   push:
-    branches: [ "95-fix-broken-workflow-scripts" ]
-  pull_request:
     branches: [ "master" ]
+  pull_request:
+    branches: [ "develop" ]
   workflow_dispatch:
  
 jobs:
   security-file-integrity_scanner:
-    uses: pwssOrg/reusable-workflows/.github/workflows/sca_scan_base_postgres.yml@Fix_Broken_Workflow_Scripts_in_file_integrity_scanner-95
+    uses: pwssOrg/reusable-workflows/.github/workflows/sca_scan_base_postgres.yml@main
     with:
        working-path: File-Integrity-Scanner
        name-of-snyk-step: Check for vulnerabilities in File Integrity Scanner
