--- a/.github/workflows/snyk-scan.yml
+++ b/.github/workflows/snyk-scan.yml
@@ -2,7 +2,7 @@ name: SCA Scan - File Integrity Scanner
 
 on:
   push:
-    branches: [ "master" ]
+    branches: [ "95-fix-broken-workflow-scripts" ]
   pull_request:
     branches: [ "develop" ]
   workflow_dispatch:
