--- a/.github/workflows/snyk-scan.yml
+++ b/.github/workflows/snyk-scan.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches: [ "95-fix-broken-workflow-scripts" ]
   pull_request:
-    branches: [ "develop" ]
+    branches: [ "master" ]
   workflow_dispatch:
  
 jobs:
