--- a/.github/workflows/snyk-scan.yml
+++ b/.github/workflows/snyk-scan.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches: [ "master" ]
   pull_request:
-    branches: [ "develop" ]
+    branches: [ "master" ]
   workflow_dispatch:
  
 jobs:
@@ -15,5 +15,5 @@ jobs:
        name-of-snyk-step: Check for vulnerabilities in File Integrity Scanner
     secrets:
       SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
-      USER_FOR_SNYK: ${{ secrets.READ_PACKAGE_USER_FOR_WORKFLOWS }}  # Add this line if needed
-      READ_PACKAGE_TOKEN_INPUT: ${{ secrets.READ_PACKAGE_TOKEN_FOR_WORKFLOWS }}  # Add this line if
+      USER_FOR_SNYK: ${{ secrets.READ_PACKAGE_USER_FOR_WORKFLOWS }}
+      READ_PACKAGE_TOKEN_INPUT: ${{ secrets.READ_PACKAGE_TOKEN_FOR_WORKFLOWS }}
