--- a/File-Integrity-Scanner/pom.xml
+++ b/File-Integrity-Scanner/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>org.pwss</groupId>
     <artifactId>File-Integrity-Scanner</artifactId>
-    <version>0.5</version>
+    <version>0.7</version>
     <packaging>jar</packaging>
     <description>A File Integrity Scanner</description>
     <licenses>
@@ -61,6 +61,7 @@
         </dependency>
 
 
+
         <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-test -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -95,7 +96,7 @@
 <dependency>
   <groupId>lib.pwss</groupId>
   <artifactId>directory_nav</artifactId>
-  <version>1.0</version>
+  <version>1.3.future</version>
 </dependency>
 
 
@@ -113,4 +114,3 @@
         </plugins>
     </build>
 </project>
-
