Added some docs and bumped directory_nav to 1.4 & started java.io.File switch over

--- a/File-Integrity-Scanner/pom.xml
+++ b/File-Integrity-Scanner/pom.xml
@@ -97,7 +97,7 @@
         <dependency>
             <groupId>lib.pwss</groupId>
             <artifactId>directory_nav</artifactId>
-            <version>1.3.future</version>
+            <version>1.4</version>
         </dependency>
 
 
