--- a/File-Integrity-Scanner/src/main/resources/application.yaml
+++ b/File-Integrity-Scanner/src/main/resources/application.yaml
@@ -7,7 +7,7 @@ spring:
     database: postgresql
     hibernate:
       auto_quote_keyword: false
-      ddl-auto: update
+      ddl-auto: validate
       jdbc:
         time_zone: UTC
   datasource:
