--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,10 +36,13 @@ jobs:
         cache: 'maven'
 
 
-    - name: Set up environment variables
+    - name: Set up environment variable for GitHub Packages
       env:
         GITHUB_TOKEN: ${{ secrets.READ_PACKAGE_TOKEN_FOR_WORKFLOWS }}
       run: echo "GITHUB_TOKEN is set to access private packages"
+
+    - name: Set up Spring profile for build
+      run: "export SPRING_PROFILES_ACTIVE=build"
 
     # Add a step to create Maven settings with the GitHub token
     - name: Setup Maven Settings
