auto-quoting database identifiers

--- a/File-Integrity-Scanner/src/main/resources/application-build.yaml
+++ b/File-Integrity-Scanner/src/main/resources/application-build.yaml
@@ -5,7 +5,7 @@ spring:
     open-in-view: false
     database: postgresql
     hibernate:
-      auto_quote_keyword: false
+      auto_quote_keyword: true
       ddl-auto: update
       jdbc:
         time_zone: UTC
