--- a/File-Integrity-Scanner/pom.xml
+++ b/File-Integrity-Scanner/pom.xml
@@ -86,6 +86,13 @@
             <version>42.7.7</version>
         </dependency>
 
+                <!-- https://mvnrepository.com/artifact/org.springframework.security/spring-security-core -->
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-core</artifactId>
+            <version>7.0.0-M1</version>
+        </dependency>
+
 
         <!-- https://github.com/pwssOrg/literate-octo-guacamole/packages/2589330 -->
         <dependency>
