--- a/File-Integrity-Scanner/src/main/resources/application-build.yaml
+++ b/File-Integrity-Scanner/src/main/resources/application-build.yaml
@@ -1,6 +1,9 @@
 spring:
   main:
     show-banner: false
+  mvc:
+    servlet:
+      path: /api
   jpa:
     open-in-view: false
     database: postgresql
