--- a/File-Integrity-Scanner/src/main/resources/application.yaml
+++ b/File-Integrity-Scanner/src/main/resources/application.yaml
@@ -22,3 +22,6 @@ server:
   servlet:
           context-path: /api
   connection-timeout: 240000 # milliseconds (4 minute)
+
+directory:
+      endpoint-code: 4350345983458934 # It is possible to use an environment variable if required: ${ENDPOINT_CODE_1}
