--- a/File-Integrity-Scanner/src/main/resources/application.yaml
+++ b/File-Integrity-Scanner/src/main/resources/application.yaml
@@ -22,7 +22,10 @@ server:
   servlet:
           context-path: /api
   connection-timeout: 240000 # milliseconds (4 minute)
-
+  ssl:
+    key-store-type: PKCS12
+    key-store: classpath:keystore.pkcs8.p12 ## We make as new one for production (Server Certificate)
+    key-store-password: ${ssl_file_integrity_scanner} ## Ask me when doing PR and I´ll send you the password from another channel
 directory:
       endpoint-code: 4350345983458934 # It is possible to use an environment variable if required: ${ENDPOINT_CODE_1}
   
