--- a/File-Integrity-Scanner/src/main/resources/application.yaml
+++ b/File-Integrity-Scanner/src/main/resources/application.yaml
@@ -27,6 +27,8 @@ server:
     key-store-type: PKCS12
     key-store: classpath:keystore.pkcs8.p12 ## We make as new one for production (Server Certificate)
     key-store-password: ${ssl_file_integrity_scanner}
+    enabled: true
+    http-port: -1
 directory:
       endpoint-code: 4350345983458934 # It is possible to use an environment variable if required: ${ENDPOINT_CODE_1}
   
