feat: update dependencies and disable Swagger annotations for production
- Updated Spring Boot: 4.0.0-RC1 → 4.0.0-RC2
- Updated Springdoc WebMVC UI: 3.0.0-M1 → 3.0.0-RC1
  - Removed obsolete exclusions thanks to the new Springdoc release
- Updated Hibernate Validator: 9.1.0.CR1 → 9.1.0.Final

Also disabled Swagger annotations in application.yml (for future production artifacts)
to prevent exposing unnecessary API metadata outside development environments.

--- a/File-Integrity-Scanner/src/main/resources/application.yaml
+++ b/File-Integrity-Scanner/src/main/resources/application.yaml
@@ -31,4 +31,8 @@ server:
     http-port: -1
 directory:
       endpoint-code: 4350345983458934 # It is possible to use an environment variable if required: ${ENDPOINT_CODE_1}
+# Enable API documentation only in development environment
+springdoc:
+  api-docs:
+    enabled: false
   
